2001-10-24  Alexandre Petit-Bianco  <apbianco@redhat.com>

	* mangle.c (static tree compression_table): Fixed leading comment.
	* parse.h (struct parser_ctxt): Fixed field comment.
	* parse.y (check_pkg_class_access): New prototype, fixed leading
	comment, new parameter used to emit error only if passed as true.
	(parse_check_super): Pass extra argument to check_pkg_class_access.
	(do_resolve_class): Likewise.
	(process_imports): Likewise.
	(read_import_dir): Fixed indentation.
	(find_in_imports_on_demand): New local class_type_name. Local
	node_to_use deleted. while loop changed into for loop. Report
	multiple definition only for accessible classes. Improved error
	message.
	(start_complete_expand_method): Local `ptr' removed. DECL_ARGUMENTS
	assigned to parameter list, fixed indentation. while loop changed
	into for loop, restore TREE_CHAIN on local `tem' before the next
	iteration.

Tue Oct 23 14:02:17 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* lang.c (lang_get_alias_set): Deleted.

2001-10-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gjavah.c (jni_print_char): Fix thinko in last change.

	* gjavah.c (jni_print_char, decode_signature_piece): Use
	safe-ctype macros and/or fold extra calls into fewer ones.
	* lex.c (java_read_unicode, java_lex): Likewise.
	* lex.h (JAVA_START_CHAR_P, JAVA_PART_CHAR_P, JAVA_ASCII_DIGIT,
	JAVA_ASCII_HEXDIGIT, JAVA_ASCII_LETTER): Likewise.
	* mangle_name.c (append_unicode_mangled_name,
	unicode_mangling_length): Likewise.

2001-10-17  Richard Henderson  <rth@redhat.com>

	* Make-lang.in (java/lang.o): Depend on langhooks.h.

2001-10-15  Alexandre Petit-Bianco  <apbianco@redhat.com>

	* lang.c (langhooks.h): Included.
	(LANG_HOOKS_INIT): Redefined.
	(LANG_HOOKS_INIT_OPTIONS): Likewise.
	(LANG_HOOKS_DECODE_OPTION): Likewise.
	(struct lang_hooks lang_hooks): New initialization.

2001-10-11  Per Bothner  <per@bothner.com>

	* parse.y (patch_synchronized_statement):  Use a TRY_FINALLY_EXPR